adjust css to prepare release 1.3b (fix lang select on ios)

--- a/debug/css/main.css
+++ b/debug/css/main.css
@@ -793,6 +793,7 @@ b {
     display: flex;
     align-items: center;
     padding: 10px 0px;
+    height: 2vh;
 }
 
 .flag-label-wrapper {
